修复部分项目潜在问题
